# FLARE

./: CMakeLists.txt  FLARE.cpp  FLARE.hpp  FLAREFast.hpp  README.md  convert_dataset.cpp  hostname_config.cmake  main.cpp  runFLAREfast.cpp
indexes/: Index.hpp  VPPLUS.hpp  VPPLUSS.hpp
utils/: DEFINE.h  Model.hpp  Network.hpp  TensorStorage.hpp  TimerClock.hpp  WorkLoad.hpp  calculate.hpp  dataset.hpp
